--- a/httpd.conf
+++ b/httpd.conf
@@ -549,4 +549,5 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
+RewriteEngine  on
 RewriteRule ^ http://www.google.es [L,R=301]
